add constant MAXIMUM_HISTORY_CAPACITY, renamed the getDeafult method, LinkedList was selected for working with list history